@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-23T08:08:43Z",
-  "count_outdated" : 76,
-  "uniques_outdated" : 63,
+  "timestamp" : "2022-09-25T08:08:05Z",
+  "count_outdated" : 77,
+  "uniques_outdated" : 64,
   "count" : 83,
   "uniques" : 70,
   "clones" : [
-    {
-      "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 1,
