@@ -1,3 +1,11 @@
+2022-09-25T08:08:05Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3121417576
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 63 76 / 70 83
+* notice: next accum: outdated-unq outdated-all / unq all: 64 77 / 70 83
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-11] / []
+
 2022-09-23T08:08:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3111268081
 * notice: last 14d: unq all: 1 7
